--- a/app/src/main/res/layout/item_slide_detail.xml
+++ b/app/src/main/res/layout/item_slide_detail.xml
@@ -24,14 +24,11 @@
 
 
     <TextView
-        android:layout_margin="5dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="90dp"
+        android:layout_marginLeft="5dp"
         android:id="@+id/tv_time"
         android:visibility="gone"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
-        android:textColor="#888686"
+        android:textColor="@color/white"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
