--- a/app/src/main/res/layout/dialog_loading_progress.xml
+++ b/app/src/main/res/layout/dialog_loading_progress.xml
@@ -19,6 +19,7 @@
         />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_loading_hint"
         android:layout_marginTop="16dp"
         android:layout_below="@id/tv_percent"
