--- a/app/src/main/res/layout/activity_slide_preview.xml
+++ b/app/src/main/res/layout/activity_slide_preview.xml
@@ -44,5 +44,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"  />
-
+    <VideoView
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 </RelativeLayout>
