--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,4 +96,5 @@
     <color name="pro_bg">#f0ffffff</color>
     <color name="color_3e000000">#66000000</color>
     <color name="color_3e5d5a55">#3e5d5a55</color>
+    <color name="color_eeeeee">#eeeeee</color>
 </resources>
