--- a/app/src/main/res/layout/item_function_layout.xml
+++ b/app/src/main/res/layout/item_function_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/bg_solid_corner_white"
     android:gravity="center"
+    android:id="@+id/ll_parent"
     android:orientation="vertical"
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
