--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -98,4 +98,6 @@
     <color name="color_3e5d5a55">#3e5d5a55</color>
     <color name="color_eeeeee">#eeeeee</color>
     <color name="color_fd7a40">#fd7a40</color>
+    <color name="color_0da606">#0da606</color>
+    <color name="color_e43018">#e43018</color>
 </resources>
