--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -100,4 +100,7 @@
     <color name="color_fd7a40">#fd7a40</color>
     <color name="color_0da606">#0da606</color>
     <color name="color_e43018">#e43018</color>
+    <color name="color_ff783e">#ff783e</color>
+    <color name="color_trans_light">#4c000000</color>
+
 </resources>
