--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -104,4 +104,5 @@
     <color name="color_trans_light">#66000000</color>
     <color name="color_b7b6b2">#b7b6b2</color>
     <color name="color_333333">#333333</color>
+    <color name="color_fefefe">#fefefe</color>
 </resources>
