--- a/app/src/main/res/layout/activity_recommend_food.xml
+++ b/app/src/main/res/layout/activity_recommend_food.xml
@@ -1,38 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_eeeeee"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <include
-        layout="@layout/layout_head_title"
-        />
-    <android.support.v7.widget.RecyclerView
-        android:background="@color/color_eeeeee"
-        android:id="@+id/rlv_foods"
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <include layout="@layout/layout_head_title" />
+
     <RelativeLayout
-        android:background="@color/white"
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_pro"
-            android:textStyle="bold"
-            android:enabled="false"
-            android:textColor="@color/white"
-            android:background="@drawable/onkey_pro_selector"
-            android:textSize="15sp"
-            android:gravity="center"
-            android:text="一键投所选内容"
-            android:layout_centerInParent="true"
-            android:layout_width="227dp"
-            android:layout_height="36dp" />
+        android:layout_height="match_parent">
+        <!--推荐菜列表-->
+        <include layout="@layout/include_recommend_list" />
+
+        <!--包间列表-->
+        <include
+            layout="@layout/include_room_list"
+            android:visibility="gone" />
     </RelativeLayout>
+
 </LinearLayout>
