--- a/app/src/main/res/drawable/corner_remote_view_click.xml
+++ b/app/src/main/res/drawable/corner_remote_view_click.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#555555"  />
+        android:color="#fd7a40"  />
 
     <padding
         android:bottom="1dp"
