--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
         android:layout_height="40dp"
         android:textSize="13sp"
         android:text="获取验证码"
+        android:textColor="@color/color_fd7a40"
         android:gravity="center"
         android:padding="3dp"
         android:layout_marginTop="17dp"
