--- a/app/src/main/res/layout/welcome_set_bg_layout.xml
+++ b/app/src/main/res/layout/welcome_set_bg_layout.xml
@@ -6,6 +6,10 @@
     <include
         android:id="@+id/head_layout"
         layout="@layout/layout_head_title"/>
+    <!--包间列表-->
+    <include
+        layout="@layout/include_room_list"
+        android:visibility="gone" />
     <ScrollView
         android:layout_below="@+id/head_layout"
         android:layout_width="match_parent"
