--- a/app/src/main/res/layout/activity_slide_preview.xml
+++ b/app/src/main/res/layout/activity_slide_preview.xml
@@ -37,7 +37,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/title_text_size" />
         </RelativeLayout>
-    <com.savor.resturant.widget.LoopViewPager
+    <android.support.v4.view.ViewPager
         android:layout_below="@id/subtitle_layout"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
