--- a/app/src/main/res/layout/view_image.xml
+++ b/app/src/main/res/layout/view_image.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitCenter" />
-    <VideoView
+    <com.universalvideoview.UniversalVideoView
         android:layout_centerInParent="true"
         android:visibility="gone"
         android:id="@+id/videoview"
