--- a/common-library/src/main/res/values/api_styles.xml
+++ b/common-library/src/main/res/values/api_styles.xml
@@ -34,6 +34,7 @@
         <item name="android:maxWidth">38.0dip</item>
         <item name="android:maxHeight">38.0dip</item>
         <item name="android:indeterminateDrawable">@anim/base_loading_large_anim</item>
+        <item name="android:indeterminateBehavior">repeat</item>
         <item name="android:minWidth">38.0dip</item>
         <item name="android:minHeight">38.0dip</item>
     </style>
