--- a/app/src/main/res/layout/welcome_set_bg_layout.xml
+++ b/app/src/main/res/layout/welcome_set_bg_layout.xml
@@ -216,6 +216,9 @@
     </ScrollView>
     <!--包间列表-->
     <include
+        android:layout_below="@id/head_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         layout="@layout/include_room_list"
         android:visibility="gone" />
 
