--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,28 @@
     <include
         android:id="@+id/head_layout"
         layout="@layout/layout_head_title"/>
-    <TextView
-        android:id="@+id/tv_wifi_hint"
-        android:drawablePadding="7.5dp"
-        android:textSize="16sp"
-        android:textColor="#e43018"
-        android:gravity="center_vertical"
-        android:drawableLeft="@drawable/ico_exe_hint"
-        android:text="请链接“花家怡园”的wifi后继续操作"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
+    <LinearLayout
         android:background="#e9e5db"
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_wifi_hint"
+            android:drawablePadding="7.5dp"
+            android:textSize="16sp"
+            android:textColor="#e43018"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ico_exe_hint"
+            android:text="请链接“花家怡园”的wifi后继续操作"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="#e9e5db"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
