--- a/app/src/main/res/layout/activity_recommend_food.xml
+++ b/app/src/main/res/layout/activity_recommend_food.xml
@@ -12,7 +12,11 @@
         android:layout_height="match_parent">
         <!--推荐菜列表-->
         <include layout="@layout/include_recommend_list" />
-
+        <include
+            android:id="@+id/empty_layout"
+            layout="@layout/include_empty_layout"
+            android:visibility="gone"
+            />
         <!--包间列表-->
         <include
             layout="@layout/include_room_list"
