欢迎词投屏

--- a/app/src/main/res/layout/welcome_set_text_layout.xml
+++ b/app/src/main/res/layout/welcome_set_text_layout.xml
@@ -20,7 +20,7 @@
         android:textSize="15sp"
         android:maxLength="18"
         android:textColorHint="#999999"
-        android:textColor="#666666"
+        android:textColor="@color/black"
         android:layout_height="80dp" />
 
     <RelativeLayout
