--- a/app/src/main/res/layout/activity_photo_select.xml
+++ b/app/src/main/res/layout/activity_photo_select.xml
@@ -92,6 +92,7 @@
             android:background="@color/pro_bg"
             android:ellipsize="end"
             android:maxLines="1"
+            android:textAllCaps="false"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textColor="@color/dialog_text_black"
