--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#202020</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#922c3e</color>
+    <color name="colorPrimaryDark">#922c3e</color>
+    <color name="colorAccent">#922c3e</color>
 
     <color name="title_bg">#f6f6f6</color>
     <color name="title_text_color">#333333</color>
@@ -108,4 +108,9 @@
 
     <color name="app_red_color">#922c3e</color>
     <color name="app_divider_gray">#CCC5BD</color>
+
+    <color name="side_bar_text">#4A4A4A</color>
+    <color name="shadow_bg">#66000000</color>
+    <color name="edit_bg">#EFEFF4</color>
+    <color name="darker_gray">#9b9b9b</color>
 </resources>
