--- a/app/src/main/res/layout/layout_head_title.xml
+++ b/app/src/main/res/layout/layout_head_title.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/title_bg"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:id="@+id/ll_head">
 
