--- a/app/src/main/res/layout/activity_contact_and_customer_list.xml
+++ b/app/src/main/res/layout/activity_contact_and_customer_list.xml
@@ -9,6 +9,7 @@
         />
 
     <LinearLayout
+        android:layout_weight="1"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -66,6 +67,37 @@
         </FrameLayout>
 
     </LinearLayout>
-
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/ll_import_layout"
+        android:background="@color/gray_bg"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <CheckBox
+            android:id="@+id/cb_select_all"
+            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginRight="10dp"
+            android:text="全选"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_import"
+            android:padding="10dp"
+            android:background="@color/gray"
+            android:gravity="center"
+            android:text="导入"
+            android:textSize="18sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
