--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -1,16 +1,39 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.savor.resturant.fragment.CustomerFragment">
+    <include
+        layout="@layout/layout_head_title"
+        />
+    <LinearLayout
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:gravity="center"
+            android:drawablePadding="10dp"
+            android:text="新增客户"
+            android:drawableTop="@drawable/ico_slide_video"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <View
+            android:background="@color/divider_list"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"/>
+        <TextView
+            android:gravity="center"
+            android:drawablePadding="10dp"
+            android:text="添加消费记录"
+            android:drawableTop="@drawable/ico_slide_video"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:textSize="25sp"
-        android:textColor="@color/color_ff783e"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CustomerFragment" />
-
-</FrameLayout>
+    </LinearLayout>
+</LinearLayout>
