--- a/app/src/main/res/layout/activity_contact_and_customer_list.xml
+++ b/app/src/main/res/layout/activity_contact_and_customer_list.xml
@@ -13,27 +13,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="#EDE6DE"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_search"
-                android:drawablePadding="10dp"
-                android:drawableLeft="@drawable/ico_search"
-                android:textSize="14sp"
-                android:textColorHint="@color/text_content_black"
-                android:textColor="@color/white"
-                android:background="@drawable/bg_search_text"
-                android:padding="10dp"
-                android:hint="输入姓名或手机号查找客户"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <include
+            layout="@layout/include_search_border"
+            />
 
         <!--<EditText-->
             <!--android:id="@+id/et_search"-->
