--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -8,6 +8,7 @@
         layout="@layout/layout_head_title"
         />
     <LinearLayout
+        android:background="#F6F3EE"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:gravity="center_vertical"
@@ -35,5 +36,27 @@
             android:layout_weight="1"
             android:layout_height="wrap_content" />
 
+    </LinearLayout>
+    <include
+        layout="@layout/include_search_border"
+        />
+    <LinearLayout
+        android:orientation="vertical"
+        android:background="#F6F3EE"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_margin="15dp"
+            android:text="最近操作"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rlv_op_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:layout_marginRight="15dp" />
     </LinearLayout>
 </LinearLayout>
