--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_add_customer"
             android:gravity="center"
             android:drawablePadding="10dp"
             android:text="新增客户"
@@ -28,6 +29,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"/>
         <TextView
+            android:id="@+id/tv_add_history"
             android:gravity="center"
             android:drawablePadding="10dp"
             android:text="添加消费记录"
