--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -10,6 +10,7 @@
     <include layout="@layout/layout_head_title" />
 
     <ScrollView
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -33,6 +34,7 @@
                     android:orientation="vertical">
 
                     <EditText
+                        android:textSize="14sp"
                         android:id="@+id/et_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -53,6 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <EditText
+                            android:textSize="14sp"
                             android:id="@+id/et_phone"
                             android:layout_weight="1"
                             android:drawablePadding="10dp"
@@ -126,11 +129,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <LinearLayout
-                    android:padding="10dp"
                     android:gravity="center_vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
+                        android:layout_marginLeft="10dp"
                         android:src="@drawable/ico_slide_video"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -168,14 +171,16 @@
                     android:layout_marginBottom="10dp"
                     android:background="@color/divider_list" />
                 <RelativeLayout
-                    android:padding="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:layout_marginLeft="10dp"
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
                         android:hint="请选择消费能力"
-                        android:drawableLeft="@drawable/ico_slide_video"
+                        android:drawableLeft="@drawable/delete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <ImageView
@@ -188,18 +193,20 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@color/divider_list" />
                 <RelativeLayout
-                    android:padding="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:layout_marginLeft="10dp"
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
                         android:hint="请选择生日"
-                        android:drawableLeft="@drawable/ico_slide_video"
+                        android:drawableLeft="@drawable/delete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <ImageView
@@ -212,20 +219,23 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
                     android:background="@color/divider_list" />
 
                 <RelativeLayout
-                    android:padding="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:layout_marginLeft="10dp"
                         android:background="@color/transparent"
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
                         android:hint="请输入籍贯"
-                        android:drawableLeft="@drawable/ico_slide_video"
+                        android:textSize="14sp"
+                        android:drawableLeft="@drawable/delete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -233,10 +243,39 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
                     android:background="@color/divider_list" />
+                <RelativeLayout
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:textSize="14sp"
+                        android:layout_marginLeft="10dp"
+                        android:background="@color/transparent"
+                        android:drawablePadding="10dp"
+                        android:gravity="center_vertical"
+                        android:hint="请输入发票信息"
+                        android:drawableLeft="@drawable/delete"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/divider_list" />
+
             </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
+    <Button
+        android:layout_gravity="center_horizontal"
+        android:text="保存"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
