--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -55,6 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <EditText
+                            android:inputType="number"
                             android:textSize="14sp"
                             android:id="@+id/et_phone"
                             android:layout_weight="1"
@@ -72,6 +73,7 @@
                             android:layout_height="wrap_content" />
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/ll_second_mobile"
                         android:visibility="gone"
                         android:orientation="vertical"
                         android:layout_width="match_parent"
@@ -83,6 +85,7 @@
                             android:layout_marginBottom="10dp"
                             android:background="@color/divider_list" />
                         <EditText
+                            android:id="@+id/et_second_mobile"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/transparent"
@@ -94,6 +97,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_upload_header"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
