--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -86,6 +86,7 @@
                             android:background="@color/divider_list" />
                         <EditText
                             android:id="@+id/et_second_mobile"
+                            android:textSize="14sp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/transparent"
@@ -175,12 +176,14 @@
                     android:layout_marginBottom="10dp"
                     android:background="@color/divider_list" />
                 <RelativeLayout
+                    android:id="@+id/rl_con_ability"
                     android:paddingRight="10dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/tv_con_ability"
                         android:layout_marginLeft="10dp"
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
@@ -202,12 +205,14 @@
                     android:layout_marginBottom="5dp"
                     android:background="@color/divider_list" />
                 <RelativeLayout
+                    android:id="@+id/rl_birthday"
                     android:paddingRight="10dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/tv_birthday"
                         android:layout_marginLeft="10dp"
                         android:drawablePadding="10dp"
                         android:gravity="center_vertical"
