--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -113,4 +113,7 @@
     <color name="shadow_bg">#66000000</color>
     <color name="edit_bg">#EFEFF4</color>
     <color name="darker_gray">#9b9b9b</color>
+
+    <color name="color_text_black">#434343</color>
+    <color name="grid_item_divider">#EAEAEA</color>
 </resources>
