--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -106,6 +106,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/iv_header"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ico_slide_video" />
