--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -144,6 +144,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <RadioGroup
+                        android:id="@+id/rg_sex"
                         android:orientation="horizontal"
                         android:paddingLeft="20dp"
                         android:paddingRight="10dp"
@@ -239,6 +240,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:id="@+id/et_birth_place"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:layout_marginLeft="10dp"
@@ -262,6 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
+                        android:id="@+id/et_ticket_info"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:textSize="14sp"
