--- a/app/src/main/res/layout/activity_spend_history_add.xml
+++ b/app/src/main/res/layout/activity_spend_history_add.xml
@@ -47,6 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:maxLength="11"
                     android:inputType="number"
                     android:textSize="14sp"
                     android:id="@+id/et_phone"
