--- a/app/src/main/res/drawable/bg_search_text.xml
+++ b/app/src/main/res/drawable/bg_search_text.xml
@@ -16,6 +16,6 @@
         <!--android:width="0.1dp"-->
         <!--/>-->
     <solid
-        android:color="@color/gray_2"
+        android:color="#F6F3EE"
         />
 </shape>
