--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="head_title_bg">#F5F1ED</color>
     <color name="head_title_text">#D48A2C</color>
     <color name="title_red_bg">#db3641</color>
-    <color name="divider_list">#F0EFF5</color>
+    <color name="divider_list">#B5B2AD</color>
     <color name="common_background">#f5f3f0</color>
     <color name="buy_button_bg">#2D9408</color>
     <color name="send_button_bg">#057BFF</color>
