--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -302,11 +302,15 @@
 
         </LinearLayout>
     </ScrollView>
-    <Button
+    <TextView
+        android:textSize="16sp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:background="@drawable/right_bg_button"
         android:layout_marginBottom="20dp"
-        android:id="@+id/btn_save"
+        android:id="@+id/tv_save"
         android:layout_gravity="center_horizontal"
         android:text="保存"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content" />
 </LinearLayout>
