--- a/app/src/main/res/drawable/selector_foot_tab_customer.xml
+++ b/app/src/main/res/drawable/selector_foot_tab_customer.xml
@@ -3,12 +3,12 @@
     <item
         android:state_selected="true"
         android:state_pressed="false"
-        android:drawable="@drawable/delete"/>
+        android:drawable="@drawable/ico_tab_customer_selected"/>
 
     <item
         android:state_checked="true"
         android:state_pressed="false"
-        android:drawable="@drawable/delete"/>
-    <item android:drawable="@drawable/delete"/>
+        android:drawable="@drawable/ico_tab_customer_selected"/>
+    <item android:drawable="@drawable/ico_tab_customer_normal"/>
 </selector>
 
