--- a/app/src/main/res/layout/activity_spend_history_add.xml
+++ b/app/src/main/res/layout/activity_spend_history_add.xml
@@ -95,12 +95,12 @@
 
     <LinearLayout
         android:background="#F6F3EE"
-        android:padding="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -112,6 +112,7 @@
                 android:textSize="15sp" />
 
             <TextView
+                android:textColor="@color/colorPrimaryDark"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:paddingLeft="10dp"
@@ -123,15 +124,19 @@
                 android:text="编辑" />
         </RelativeLayout>
         <FrameLayout
+            android:paddingBottom="20dp"
             android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.RecyclerView
                 android:visibility="gone"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:id="@+id/rlv_labels"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
+                android:padding="10dp"
                 android:text="选择或输入客人信息后，可以进行标签管理"
                 android:paddingBottom="20dp"
                 android:id="@+id/tv_label_hint"
