--- a/app/src/main/res/layout/activity_label_add.xml
+++ b/app/src/main/res/layout/activity_label_add.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <EditText
+            android:id="@+id/et_intpu_label"
             android:padding="10dp"
             android:layout_marginRight="50dp"
             android:hint="请手动添加列表中没有的标签"
