--- a/app/src/main/res/layout/include_customer_label.xml
+++ b/app/src/main/res/layout/include_customer_label.xml
@@ -23,6 +23,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_edit_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
